# xml_dataclasses

./: .pre-commit-config.yaml  .pylintrc  README.md  lint  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  release.yaml
functional/: annotation_test.py  container_test.py  package.xml  package_test.py  utils.py
src/xml_dataclasses/: __init__.py  exceptions.py  lxml_utils.py  modifiers.py  options.py  resolve_types.py  serde.py  structs.py
tests/: dump_test.py  load_test.py  lxml_utils_test.py  modifiers_test.py  resolve_types_other_test.py  resolve_types_resolve_test.py  structs_test.py
